# polymorphic-constant

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: tests-2015.rs  tests-no-std.rs  tests-replace.rs  tests-std.rs
