[package]
name = "polymorphic-constant"
version = "0.2.0"
edition = "2018"

authors = ["Louis Garczynski <louis.roc@gmail.com>"]
repository = "https://github.com/lgarczyn/polymorphic-constant"
license = "MIT"
description = "A macro to define a numerical constant in multiple types at once"
keywords = ["constant", "const", "type", "polymorphic", "overflow"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[badges]
github = { repository = "lgarczyn/polymorphic-constant" }
maintenance = { status = "actively-developed" }
