[package]
name = "polymorphic-constant"
version = "1.0.0"
edition = "2018"

authors = ["Louis Garczynski <louis.roc@gmail.com>"]
repository = "https://github.com/lgarczyn/polymorphic-constant"
license = "MIT"
description = "A macro to define a numerical constant in multiple types at once"
keywords = ["constant", "const", "type", "polymorphic", "overflow"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
convert_case = "0.1.0"
proc-macro2 = "*"

[dependencies.syn]
version = "1.0.64"
features = ["full", "visit-mut"]

[badges]
github = { repository = "lgarczyn/polymorphic-constant" }
maintenance = { status = "actively-developed" }
